--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,20 +19,26 @@ services:
       dockerfile: Dockerfile-Ubuntu20
     image: baxtree/subaligner:${SUBALIGNER_VERSION}.u20
 
+  subaligner-ubuntu22:
+    build:
+      context: ./
+      dockerfile: Dockerfile-Ubuntu22
+    image: baxtree/subaligner:${SUBALIGNER_VERSION}.u22
+
   subaligner-archlinux:
     build:
       context: ./
       dockerfile: Dockerfile-ArchLinux
     image: baxtree/subaligner:${SUBALIGNER_VERSION}.arch
 
-  subaligner-debian10:
+  subaligner-debian11:
     build:
       context: ./
       dockerfile: Dockerfile-Debian11
     image: baxtree/subaligner:${SUBALIGNER_VERSION}.deb11
 
-  subaligner-fedora31:
+  subaligner-fedora34:
     build:
       context: ./
-      dockerfile: Dockerfile-Fedora37
-    image: baxtree/subaligner:${SUBALIGNER_VERSION}.fed37
+      dockerfile: Dockerfile-Fedora34
+    image: baxtree/subaligner:${SUBALIGNER_VERSION}.fed34
