--- a/requirements-aarch64.txt
+++ b/requirements-aarch64.txt
@@ -14,17 +14,17 @@ dask>=2021.10.0,<2022.1.0
 decorator==4.3.0
 distributed==1.13.0
 filelock<4.0.0
+google-auth-oauthlib==0.4.2
 google-pasta~=0.2
 graphviz==0.8.3
 HeapDict==1.0.0
-h5py<=3.6.0
+h5py<=4.0.0
 html5lib==1.0b9
 hyperopt==0.2.4
 idna==2.8
 isort==4.3.4
 joblib>=1.2.0
-Keras-Applications>=1.0.8
-Keras-Preprocessing>=1.0.9
+keras~=2.12.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.4.3
 le-pycaption==2.2.0a1
@@ -38,6 +38,7 @@ numpy<1.24.0
 oauthlib==3.1.0
 pbr==4.0.2
 pluggy==0.13.1
+protobuf<4.0
 psutil==5.6.7
 py==1.10.0
 pyasn1==0.4.8
@@ -58,7 +59,8 @@ scikit-learn<1.2.0
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
-tensorflow>=1.15.5,<2.13
+tensorflow-macos~=2.12.0
+tensorflow-metal~=0.8.0
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
@@ -66,3 +68,4 @@ tornado==5.1.0
 urllib3~=1.26.5
 Werkzeug>=0.15.3
 zict==0.1.3
+zipp==0.6.0
