--- a/Pipfile
+++ b/Pipfile
@@ -29,11 +29,10 @@ bleach = "==3.3.0"
 cachetools = "==3.1.1"
 captionstransformer = "~=1.2.1"
 certifi = "==2019.11.28"
-chardet = "==3.0.4"
+chardet = "~=3.0.4"
 click = "==5.1"
 cloudpickle = "==0.5.3"
 cycler = "==0.10.0"
-Cython = "~=0.29.22"
 dask = ">=2021.10.0,<2022.1.0"
 decorator = "==4.3.0"
 distributed = "==1.13.0"
@@ -49,8 +48,6 @@ isort = "==4.3.4"
 joblib = ">=1.2.0"
 Keras-Applications = ">=1.0.8"
 Keras-Preprocessing = ">=1.0.9"
-kiwisolver = "==1.0.1"
-lazy-object-proxy = "==1.4.3"
 le-pycaption = "==2.2.0a1"
 librosa = "<0.10.0"
 locket = "==0.2.0"
@@ -61,8 +58,8 @@ numpy = "<1.24.0"
 oauthlib = "==3.1.0"
 openai-whisper = "==20230314"
 pbr = "==4.0.2"
+pkgconfig = "~=1.5.5"
 pluggy = "==0.13.1"
-psutil = "==5.6.7"
 py = "==1.10.0"
 pyasn1 = "==0.4.8"
 pyasn1-modules = "==0.2.7"
@@ -83,7 +80,6 @@ rsa = "==4.7"
 scipy = "<=1.8.1"
 scikit-learn = ">=0.19.1"
 sentencepiece = "~=0.1.95"
-setuptools = ">=41.0.0"
 six = "~=1.15.0"
 tblib = "==1.3.2"
 tensorflow = ">=1.15.5,<2.12"
