--- a/docker/Dockerfile-Debian11
+++ b/docker/Dockerfile-Debian11
@@ -8,6 +8,7 @@ ENV RELEASE_VERSION=${RELEASE_VERSION}
 ENV TZ=Europe/London
 
 RUN ["/bin/bash", "-c", "apt -y update &&\
+    apt -y install build-essential &&\
     apt -y install ffmpeg &&\
     apt -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt -y install libsndfile-dev &&\
