--- a/docker/Dockerfile-Ubuntu22-ARM64
+++ b/docker/Dockerfile-Ubuntu22-ARM64
@@ -1,5 +1,5 @@
 # Subaligner Ubuntu 22 Docker Image
-FROM ubuntu:22.04
+FROM arm64v8/ubuntu:22.10
 
 ARG RELEASE_VERSION
 
@@ -11,11 +11,10 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt-get -y install libsndfile-dev &&\
-    apt-get -y install libhdf5-dev &&\
     apt-get -y install python3-dev &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
+    apt-get -y install libhdf5-dev &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install --upgrade setuptools wheel &&\
     python3 -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
     python3 -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
