--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -9,39 +9,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        
+        uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        
-      - name: checkout repo
-        uses: actions/checkout@v2
-        
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: baxtree/subaligner:latest
-      
+
       - name: Extract the tag
         id: tag
         run: echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\/v/}
 
       - name: Build and push the latest image
         id: docker_build_latest
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./docker
           file: "./docker/Dockerfile-Ubuntu20"
           build-args: |
             "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          platforms: linux/amd64,linux/arm64
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:latest
@@ -49,12 +44,13 @@ jobs:
 
       - name: Build and push the Ubuntu 20 image
         id: docker_build_u20
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./docker
           file: "./docker/Dockerfile-Ubuntu20"
           build-args: |
             "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          platforms: linux/amd64,linux/arm64
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.u20
@@ -62,12 +58,13 @@ jobs:
 
       - name: Build and push the Ubuntu 22 image
         id: docker_build_u22
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./docker
           file: "./docker/Dockerfile-Ubuntu22"
           build-args: |
             "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          platforms: linux/amd64,linux/arm64
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.u22
@@ -81,6 +78,7 @@ jobs:
           file: "./docker/Dockerfile-Fedora34"
           build-args: |
             "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          platforms: linux/amd64,linux/arm64
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.fed34
@@ -94,23 +92,8 @@ jobs:
           file: "./docker/Dockerfile-ArchLinux"
           build-args: |
             "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+          platforms: linux/amd64
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.arch
           push: true
-
-      - name: Build and push the CentOS 7 image
-        id: docker_build_el7
-        uses: docker/build-push-action@v2
-        with:
-          context: ./docker
-          file: "./docker/Dockerfile-CentOS7"
-          build-args: |
-            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
-          allow: network.host
-          github-token: ${{ github.token }}
-          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.el7
-          push: true
-
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
