--- a/docker/Dockerfile-Ubuntu22
+++ b/docker/Dockerfile-Ubuntu22
@@ -11,9 +11,11 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt-get -y install libsndfile-dev &&\
+    apt-get -y install libhdf5-dev &&\
     apt-get -y install python3-dev &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
+    python3 -m pip install --upgrade setuptools wheel &&\
     python3 -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
     python3 -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
