--- a/Pipfile
+++ b/Pipfile
@@ -16,10 +16,11 @@ radish-bdd = "~=0.13.3"
 pex = "<=2.1.80"
 mypy = "==0.790"
 parameterized = "==0.8.1"
-pylint = "~=2.8.2"
+pylint = "~=2.17.2"
 pygments = "~=2.7.4"
 sphinx = "==3.3.1"
 sphinx-rtd-theme = "==0.5.0"
+typing-extensions = "==4.5.0"
 
 [packages]
 astor = "==0.7.1"
@@ -55,13 +56,14 @@ mccabe = "==0.6.1"
 numba = ">=0.50.0"
 numpy = "<1.24.0"
 oauthlib = "==3.1.0"
-openai-whisper = "==20230314"
+openai-whisper = "==20231117"
 pbr = "==4.0.2"
 pkgconfig = "~=1.5.5"
 pluggy = "==0.13.1"
 py = "==1.10.0"
 pyasn1 = "==0.4.8"
 pyasn1-modules = "==0.2.7"
+pybind11 = "~=2.11.1"
 pycountry = "~=20.7.3"
 pydot = "==1.2.4"
 pydot-ng = "==1.0.0"
@@ -76,7 +78,7 @@ python-dateutil = "==2.7.2"
 pytz = "==2018.4"
 PyYAML = ">=4.2b1"
 rsa = "==4.7"
-scipy = "<=1.8.1"
+scipy = "<1.11.0"
 scikit-learn = ">=0.19.1"
 sentencepiece = "~=0.1.95"
 six = "~=1.15.0"
@@ -88,8 +90,8 @@ toolz = "==0.9.0"
 torch = "<1.13.0"
 tornado = "==5.1.0"
 transformers = "<4.27.0"
-typing-extensions = "~=3.7.0"
 urllib3 = "~=1.26.5"
+wrapt = "==1.14.0"
 Werkzeug = ">=0.15.3"
 zict = "==0.1.3"
 aeneas = "==1.7.3.0"
