--- a/requirements-arm64.txt
+++ b/requirements-arm64.txt
@@ -38,24 +38,24 @@ psutil==5.6.7
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
+pybind11~=2.11.1
 pycountry~=20.7.3
 pydot==1.2.4
 pydot-ng==1.0.0
 pydotplus==2.0.2
 pyprof2calltree==1.4.3
-pysrt==1.1.1
-pysubs2<=1.4.2
+pysrt==1.1.2
+pysubs2~=1.6.1
 pystack-debugger==0.8.0
 pytz==2018.4
 PyYAML>=4.2b1
 rsa==4.7
-scipy<=1.8.1
+scipy<1.11.0
 scikit-learn<1.2.0
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
 tensorflow-macos~=2.12.0
-tensorflow-metal~=0.8.0
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
