--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,14 +4,14 @@ tox~=3.23.0
 pycodestyle==2.5.0
 twine<4.0.0
 snakeviz==2.1.0
-line-profiler==3.1.0
+line-profiler~=4.1.2
 scikit-build==0.11.1
 radish-bdd~=0.13.3
 pex<=2.1.80
 mypy==1.3.0
 types-requests==2.27.9
 types-setuptools==57.4.9
-typing-extensions<4.0.0
+typing-extensions==4.5.0
 parameterized==0.8.1
-pylint~=2.8.2
+pylint~=2.17.2
 pygments==2.7.4
