--- a/requirements.txt
+++ b/requirements.txt
@@ -37,18 +37,19 @@ pluggy==0.13.1
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
+pybind11~=2.11.1
 pycountry~=20.7.3
 pydot==1.2.4
 pydot-ng==1.0.0
 pydotplus==2.0.2
 pyprof2calltree==1.4.3
-pysrt==1.1.1
-pysubs2<=1.4.2
+pysrt==1.1.2
+pysubs2~=1.6.1
 pystack-debugger==0.8.0
 pytz==2018.4
 PyYAML>=4.2b1
 rsa==4.7
-scipy<=1.8.1
+scipy<1.11.0
 scikit-learn<1.2.0
 six~=1.15.0
 tblib==1.3.2
@@ -58,5 +59,6 @@ toml==0.10.0
 toolz==0.9.0
 tornado==5.1.0
 urllib3~=1.26.5
+wrapt==1.14.0
 Werkzeug>=0.15.3
 zict==0.1.3
