--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ envlist =
 skipsdist=True
 skip_missing_interpreters = True
 
+[darglint]
+ignore=DAR101
+
 [testenv:py36]
 basepython = python3.6
 whitelist_externals = /bin/bash
