--- a/docker/Dockerfile-Fedora34
+++ b/docker/Dockerfile-Fedora34
@@ -22,6 +22,7 @@ RUN ["/bin/bash", "-c", "dnf install -y dnf-utils &&\
     dnf install -y python3-wheel &&\
     dnf install -y python3-devel &&\
     dnf install -y python3-pip &&\
+    dnf install -y hdf5 hdf5-devel &&\
     pip3 install --upgrade pip &&\
     python3 -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
     python3 -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
