support whisper's turbo model for transcription

--- a/Pipfile
+++ b/Pipfile
@@ -55,7 +55,7 @@ mccabe = "==0.6.1"
 numba = ">=0.50.0"
 numpy = "<1.24.0"
 oauthlib = "==3.1.0"
-openai-whisper = "==20231117"
+openai-whisper = "==20240930"
 pbr = "==4.0.2"
 pkgconfig = "~=1.5.5"
 pluggy = "==0.13.1"
@@ -78,6 +78,7 @@ rsa = "==4.7"
 scipy = "<1.11.0"
 scikit-learn = ">=0.19.1"
 sentencepiece = "~=0.1.95"
+setuptools = "<65.0.0"
 six = "~=1.15.0"
 tensorflow = ">=1.15.5,<2.12"
 termcolor = "==1.1.0"
