--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "Cython"]
+requires = ["setuptools<65.0.0", "wheel", "Cython"]
 
 [tool.pydoclint]
 style = 'sphinx'
