--- a/Pipfile
+++ b/Pipfile
@@ -84,7 +84,8 @@ tensorflow = ">=1.15.5,<2.12"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
-torch = "<2.2.0"
+torch = "<2.3.0"
+torchaudio = "<2.3.0"
 transformers = "<4.27.0"
 urllib3 = "~=1.26.5"
 wrapt = "==1.14.0"
