--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,4 +19,5 @@ sphinx:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-    - requirements: requirements-site.txt
+    - method: pip
+      path: ".[docs]"
