--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "bleach==3.3.0",
     "cachetools==3.1.1",
     "captionstransformer~=1.2.1",
-    "certifi==2023.7.22",
+    "certifi<2024.12.14",
     "chardet~=3.0.4",
     "cloudpickle~=1.6.0",
     "cycler==0.10.0",
@@ -39,7 +39,7 @@ dependencies = [
     "h5py<4.0.0",
     "html5lib==1.0b9",
     "hyperopt==0.2.4",
-    "idna==2.8",
+    "idna<3.9",
     "isort==4.3.4",
     "joblib>=1.2.0",
     "le-pycaption==2.2.0a1",
