--- a/.github/workflows/lint-charts.yml
+++ b/.github/workflows/lint-charts.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   lint-helm-charts:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout sources
