--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 description = "Automatically synchronize and translate subtitles, or create new ones by transcribing, using pre-trained DNNs, Forced Alignments and Transformers."
 readme = { file = "README.md", content-type = "text/markdown" }
 urls = { "Homepage" = "https://github.com/baxtree/subaligner", "Documentation" = "https://subaligner.readthedocs.io/en/latest/", "Source" = "https://github.com/baxtree/subaligner" }
+requires-python = ">=3.8,<3.12"
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.8",
@@ -53,6 +54,7 @@ dependencies = [
     "oauthlib==3.1.0",
     "pbr==4.0.2",
     "pkgconfig~=1.5.5",
+    "platformdirs<4.0.0",
     "pluggy==0.13.1",
     "psutil~=7.0.0",
     "pyasn1==0.4.8",
@@ -80,7 +82,6 @@ dependencies = [
     "Werkzeug>=0.15.3",
     "zict==0.1.3"
 ]
-requires-python = ">=3.8,<3.12"
 
 [project.optional-dependencies]
 harmony = [
@@ -116,7 +117,7 @@ dev = [
     "typing-extensions==4.5.0",
     "parameterized==0.8.1",
     "pylint~=2.17.2",
-    "pygments==2.7.4",
+    "pygments<3.0.0",
     "darglint~=1.8.1"
 ]
 docs = [
