--- a/docker/Dockerfile-Dev
+++ b/docker/Dockerfile-Dev
@@ -15,6 +15,7 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt-get -y install libsndfile-dev &&\
     apt-get -y install libhdf5-dev &&\
+    apt-get -y install libxml2-dev libxslt-dev &&\
     apt-get -y install python3-dev &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
