--- a/docker/Dockerfile-Dev
+++ b/docker/Dockerfile-Dev
@@ -3,6 +3,7 @@ FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
+ENV SETUPTOOLS_SCM_PRETEND_VERSION_FOR_SUBALIGNER=0.0.0-dev
 
 RUN mkdir -p /subaligner && chmod 755 /subaligner
 COPY subaligner /subaligner/subaligner
