--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "subaligner"
-version = "0.3.10"
+version = "0.3.11"
 authors = [
     { name = "Xi Bai", email = "xi.bai.ed@gmail.com" }
 ]
@@ -55,7 +55,7 @@ dependencies = [
     "Markdown==2.6.11",
     "mccabe==0.6.1",
     "networkx>=2.5.1",
-    "numba>=0.50.0",
+    "numba>=0.50.0,<0.62.0",
     "numpy<1.27.0",
     "oauthlib==3.1.0",
     "pbr==4.0.2",
