utilise Whisper HF hub models for transcription

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   main:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         python-version: ["3.10"]
@@ -29,11 +29,12 @@ jobs:
           sudo apt-get -y install libsndfile-dev
           sudo apt-get -y install build-essential python3-dev
           python -m pip install --upgrade pip
-          pip install -e .
-          pip install -e ".[stretch]"
-          pip install -e ".[llm]"
-          pip install -e ".[dev]"
-          pip install -e ".[site]"
+          python -m pip install "setuptools<65.0.0" wheel
+          python -m pip install --no-build-isolation -e .
+          python -m pip install --no-build-isolation -e ".[stretch]"
+          python -m pip install --no-build-isolation -e ".[llm]"
+          python -m pip install --no-build-isolation -e ".[dev]"
+          python -m pip install --no-build-isolation -e ".[site]"
       - name: Type checking
         run: |
           python -m mypy --follow-imports=normal subaligner
