--- a/docker/Dockerfile-Ubuntu22
+++ b/docker/Dockerfile-Ubuntu22
@@ -18,5 +18,5 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
     python3 -m pip install --upgrade \"setuptools<65.0.0\" wheel &&\
-    python3 -m pip install \"subaligner==${RELEASE_VERSION}\" &&\
-    python3 -m pip install \"subaligner[harmony]==${RELEASE_VERSION}\""]
+    python3 -m pip install --no-build-isolation \"subaligner==${RELEASE_VERSION}\" &&\
+    python3 -m pip install --no-build-isolation \"subaligner[harmony]==${RELEASE_VERSION}\""]
