--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.8",
     "Intended Audience :: Developers",
-    "Topic :: Utilities"
+    "Topic :: Utilities",
 ]
 dependencies = [
     "astor==0.7.1",
@@ -90,33 +90,37 @@ dependencies = [
     "urllib3~=1.26.5",
     "wrapt==1.14.0",
     "Werkzeug>=0.15.3",
-    "zict==0.1.3"
+    "zict==0.1.3",
 ]
 
 [project.optional-dependencies]
 harmony = [
     "aeneas~=1.7.3.0; python_version < '3.12'",
 #    "aeneas @ git+https://github.com/baxtree/aeneas.git@v1.7.3.1#egg=aeneas ; python_version >= '3.12'",
-    "dtw-python~=1.5.3",
     "safetensors~=0.5.3",
     "sentencepiece~=0.1.95; python_version < '3.12'",
     "sentencepiece~=0.2.0; python_version >= '3.12'",
-    "torch<2.3.0",
-    "torchaudio<2.3.0",
-    "transformers<4.37.0",
-    "openai-whisper==20250625"
+    "torch~=2.9.1",
+    "torchaudio~=2.9.1",
+    "transformers==4.57.3",
+    "accelerate~=1.12.0",
+    "soxr==1.0.0",
+    "webrtcvad~=2.0.10",
+    "silero-vad~=6.2.0",
 ]
 dev = [
     "aeneas~=1.7.3.0; python_version < '3.12'",
 #    "aeneas @ git+https://github.com/baxtree/aeneas.git@v1.7.3.1#egg=aeneas ; python_version >= '3.12'",
-    "dtw-python~=1.5.3",
     "safetensors~=0.5.3",
     "sentencepiece~=0.1.95; python_version < '3.12'",
     "sentencepiece~=0.2.0; python_version >= '3.12'",
-    "torch<2.3.0",
-    "torchaudio<2.3.0",
-    "transformers<4.37.0",
-    "openai-whisper==20250625",
+    "torch~=2.9.1",
+    "torchaudio~=2.9.1",
+    "transformers==4.57.3",
+    "soxr==1.0.0",
+    "accelerate~=1.12.0",
+    "webrtcvad~=2.0.10",
+    "silero-vad~=6.2.0",
     "mock==4.0.3",
     "coverage==5.5",
     "tox~=3.23.0",
@@ -130,11 +134,11 @@ dev = [
     "mypy==1.3.0",
     "types-requests==2.27.9",
     "types-setuptools==64.0.1",
-    "typing-extensions==4.8.0",
+    "typing-extensions==4.10.0",
     "parameterized==0.8.1",
     "pylint~=2.17.2",
     "pygments<3.0.0",
-    "darglint~=1.8.1"
+    "darglint~=1.8.1",
 ]
 docs = [
     "sphinx==6.2.1",
@@ -144,16 +148,18 @@ docs = [
 stretch = [
     "aeneas~=1.7.3.0; python_version < '3.12'",
 #    "aeneas @ git+https://github.com/baxtree/aeneas.git@v1.7.3.1#egg=aeneas ; python_version >= '3.12'",
-    "dtw-python~=1.5.3"
 ]
 llm = [
     "safetensors~=0.5.3",
     "sentencepiece~=0.1.95; python_version < '3.12'",
     "sentencepiece~=0.2.0; python_version >= '3.12'",
-    "torch<2.3.0",
-    "torchaudio<2.3.0",
-    "transformers<4.37.0",
-    "openai-whisper==20250625"
+    "torch~=2.9.1",
+    "torchaudio~=2.9.1",
+    "transformers==4.57.3",
+    "accelerate~=1.12.0",
+    "soxr==1.0.0",
+    "webrtcvad~=2.0.10",
+    "silero-vad~=6.2.0",
 ]
 
 [project.scripts]
